# HideAndSeek

./: CMakeLists.txt  Info.plist  README.md  beautify.sh  run.sh
.github/workflows/: compilation-rtype.yml
assets/: icon.icns
assets/animations/: chicken.json  player.json
assets/models/chicken/: .gitignore
assets/models/chicken/walk/: 20.mtl
assets/models/player/run/: 13.mtl
assets/models/props/: antique_cabinet.glb  chaise.glb  ecran.glb  heiniken_bottle.glb  skibidi_toilet.glb  voiture_cassee.glb  watermelon.glb
assets/shaders/: lighting.fs
cmake/: automate-vcpkg-gengine.cmake  automate-vcpkg.cmake  custom-gengine.cmake  pack.cmake
include/: Constants.hpp
include/components/: Background.hpp  Player.hpp  Prop.hpp
include/events/: ChangeCameraMode.hpp  ChangePlayerModelEvent.hpp  Crouch.hpp  GuessEvent.hpp  Jump.hpp  LockPlayerEvent.hpp  MorphToPropEvent.hpp  Movement.hpp  ResetPlayerRotationCameraEvent.hpp  ResetPlayerRotationEvent.hpp  Rotation.hpp  Sprint.hpp
include/systems/: BackgroundMotion.hpp  Camera.hpp  CameraRotation.hpp  ChangePlayerModel.hpp  Guess.hpp  HUD.hpp  Init.hpp  InputsToGameEvents.hpp  MorphToProp.hpp  PlayerMotion.hpp  ResetPlayerRotation.hpp  Start.hpp
overlay-ports/gengine/: portfile.cmake  vcpkg.json
source/: components.cpp  events.cpp  main.cpp  systems.cpp
source-3D-export/: blender_export.py  extract_models_pos.py
source/systems/: BackgroundMotion.cpp  CameraRotation.cpp  ChangePlayerModel.cpp  Guess.cpp  HUD.cpp  InputsToGameEvents.cpp  MorphToProp.cpp  PlayerMotion.cpp  ResetPlayerRotation.cpp  Start.cpp
